Mod to prevent form baseline spacing in modals

--- a/less/foundationstrap.less
+++ b/less/foundationstrap.less
@@ -55,6 +55,7 @@ Bootstrap customization best practices: http://stackoverflow.com/questions/10451
 
 // Components: Popovers
 @import "../bootstrap/less/modals";
+@import "modals";
 @import "../bootstrap/less/tooltip";
 @import "../bootstrap/less/popovers";
 
