Fix text colours

--- a/less/variables.less
+++ b/less/variables.less
@@ -248,19 +248,19 @@
 
 // Form states and alerts
 // -------------------------
-@warningText:             #FFF;
+@warningText:             #c09853;
 @warningBackground:       @orange;
 @warningBorder:           darken(spin(@orange, -10), 3%);
 
-@errorText:               #FFF;
+@errorText:               #b94a48;
 @errorBackground:         #BC1C48;
 @errorBorder:             darken(spin(@errorBackground, -10), 3%);
 
-@successText:             #FFF;
+@successText:             #468847;
 @successBackground:       #01A31C;
 @successBorder:           darken(spin(@successBackground, -10), 5%);
 
-@infoText:                #FFF;
+@infoText:                #3a87ad;
 @infoBackground:          #2D89F0;
 @infoBorder:              darken(spin(@infoBackground, -10), 7%);
 
