--- a/less/variables.less
+++ b/less/variables.less
@@ -5,18 +5,7 @@
 
 // Global values
 // --------------------------------------------------
-@green1:  #009800;
-@green2:  #008a00;
-@greenDark: #008641;
-@blu1:  #003484;
-@darkblu: #1f3445;
-@lilla: #43205a;
-@blu3:  #6a62f2;
-@light-blu1: #00bff2;
-@light-blu2: #0177db;
-@red1:  #e60d15;
-@orange:  #d9522c;
-@grey1: #7d6058;
+
 
 // Grays
 // -------------------------
@@ -53,16 +42,15 @@
 
 // Links
 // -------------------------
-@linkColor:             @blue;
-@linkColorHover:        @blueDark;
+@linkColor:             #293674;
+@linkColorHover:        #F7941D;
 
 
 // Typography
 // -------------------------
-@sansFontFamily:        "Open Sans",Arial,Helvetica,Sans-Serif;
-@serifFontFamily:       "Open Sans",Arial,Helvetica,Sans-Serif;
+@sansFontFamily:        "Segoe UI", "Open Sans", sans-serif;
+@serifFontFamily:       "Open Sans", Arial, Helvetica, sans-serif;
 @monoFontFamily:        Menlo, Monaco, Consolas, "Courier New", monospace;
-
 
 @baseFontSize:          14px;
 @baseFontFamily:        @sansFontFamily;
@@ -96,7 +84,7 @@
 @tableBackground:                   transparent; // overall background-color
 @tableBackgroundAccent:             #f9f9f9; // for striping
 @tableBackgroundHover:              #f5f5f5; // for hover
-@tableBorderHover:                  @light-blu1;
+@tableBorderHover:                  #00bff2;
 @tableBorder:                       #ccc; // table and cell border
 
 // Buttons
