--- a/less/responsive.less
+++ b/less/responsive.less
@@ -1,116 +1,125 @@
+
+.container { position: relative; }
+@media (max-width: 767px) {
+    .container {padding-left: 20px; padding-right: 20px; }
+}
+
+
 /* Desktop large
 ------------------------- */
 @media (min-width: 1200px) {
-  .bs-docs-container {
-    max-width: 970px;
-  }
-  .bs-docs-sidenav {
-    width: 258px;
-  }
-  .bs-docs-sidenav > li > a {
-    width: 230px \9; /* Override the previous IE8-9 hack */
-  }
+	.bs-docs-container {
+		max-width: 970px;
+	}
+	.bs-docs-sidenav {
+		width: 258px;
+	}
+	.bs-docs-sidenav > li > a {
+		width: 230px \9; /* Override the previous IE8-9 hack */
+	}
 }
 
 /* Desktop
 ------------------------- */
 @media (max-width: 980px) {
-  /* Unfloat brand */
-  body > .navbar-fixed-top .brand {
-    float: left;
-    margin-left: 0;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
+	/* Unfloat brand */
+	body > .navbar-fixed-top .brand {
+		float: left;
+		margin-left: 0;
+		padding-left: 10px;
+		padding-right: 10px;
+	}
 
-  /* Inline-block quick links for more spacing */
-  .quick-links li {
-    display: inline-block;
-    margin: 5px;
-  }
+	/* Inline-block quick links for more spacing */
+	.quick-links li {
+		display: inline-block;
+		margin: 5px;
+	}
 
-  /* When affixed, space properly */
-  .bs-docs-sidenav {
-    top: 0;
-    margin-top: 30px;
-    margin-right: 0;
-  }
+	/* When affixed, space properly */
+	.bs-docs-sidenav {
+		top: 0;
+		margin-top: 30px;
+		margin-right: 0;
+	}
 }
 
 /* Tablet to desktop
 ------------------------- */
 @media (min-width: 768px) and (max-width: 980px) {
-  /* Remove any padding from the body */
-  body {
-    padding-top: 0;
-  }
-  /* Widen masthead and social buttons to fill body padding */
-  .jumbotron {
-    margin-top: -20px; /* Offset bottom margin on .navbar */
-  }
-  /* Adjust sidenav width */
-  .bs-docs-sidenav {
-    width: 166px;
-    margin-top: 20px;
-  }
-  .bs-docs-sidenav.affix {
-    top: 0;
-  }
+	/* Remove any padding from the body */
+	body {
+		padding-top: 0;
+	}
+	/* Widen masthead and social buttons to fill body padding */
+	.jumbotron {
+		margin-top: -20px; /* Offset bottom margin on .navbar */
+	}
+	/* Adjust sidenav width */
+	.bs-docs-sidenav {
+		width: 166px;
+		margin-top: 20px;
+	}
+	.bs-docs-sidenav.affix {
+		top: 0;
+	}
 }
 
 /* Tablet
 ------------------------- */
 @media (max-width: 767px) {
-  /* Remove any padding from the body */
-  body {
-    padding-top: 0;
-  }
+	/* Remove any padding from the body */
+	body {
+		padding-top: 0;
+		padding-left: 0;
+		padding-right: 0;    
+	}
 
-  /* Widen masthead and social buttons to fill body padding */
-  .jumbotron {
-    padding: 40px 20px;
-    margin-top:   -20px; /* Offset bottom margin on .navbar */
-    margin-right: -20px;
-    margin-left:  -20px;
-  }
-  .masthead h1 {
-    font-size: 90px;
-  }
-  .masthead p,
-  .masthead .btn {
-    font-size: 24px;
-  }
-  .marketing .span4 {
-    margin-bottom: 40px;
-  }
-  .bs-docs-social {
-    margin: 0 -20px;
-  }
+	/* Widen masthead and social buttons to fill body padding */
+	.jumbotron {
+		padding: 40px 20px;
+		margin-top:   -20px; /* Offset bottom margin on .navbar */
+		margin-right: -20px;
+		margin-left:  -20px;
+	}
+	.masthead h1 {
+		font-size: 90px;
+	}
+	.masthead p,
+	.masthead .btn {
+		font-size: 24px;
+	}
+	.marketing .span4 {
+		margin-bottom: 40px;
+	}
+	.bs-docs-social {
+		margin: 0 -20px;
+	}
 
-  /* Space out the show-grid examples */
-  .show-grid [class*="span"] {
-    margin-bottom: 5px;
-  }
+	/* Space out the show-grid examples */
+	.show-grid [class*="span"] {
+		margin-bottom: 5px;
+	}
 
-  /* Sidenav */
-  .bs-docs-sidenav {
-    width: auto;
-    margin-bottom: 20px;
-  }
-  .bs-docs-sidenav.affix {
-    position: static;
-    width: auto;
-    top: 0;
-  }
+	/* Sidenav */
+	.bs-docs-sidenav {
+		width: auto;
+		margin-bottom: 20px;
+	}
+	.bs-docs-sidenav.affix {
+		position: static;
+		width: auto;
+		top: 0;
+	}
 
-  /* Unfloat the back to top link in footer */
-  .footer {
-    margin-left: -20px;
-    margin-right: -20px;
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .footer p {
-    margin-bottom: 9px;
-  }
+	/* Unfloat the back to top link in footer */
+	.footer {
+		margin-left: -20px;
+		margin-right: -20px;
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+	.footer p {
+		margin-bottom: 9px;
+	}
 }
