--- a/less/foundationstrap.less
+++ b/less/foundationstrap.less
@@ -44,6 +44,7 @@ Bootstrap customization best practices: http://stackoverflow.com/questions/10451
 // Components: Buttons & Alerts
 @import "../bootstrap/less/buttons";
 @import "../bootstrap/less/button-groups";
+@import "buttons";
 @import "../bootstrap/less/alerts"; // Note: alerts share common CSS with buttons and thus have styles in buttons
 
 // Components: Nav
@@ -65,6 +66,7 @@ Bootstrap customization best practices: http://stackoverflow.com/questions/10451
 @import "../bootstrap/less/thumbnails";
 @import "../bootstrap/less/media";
 @import "../bootstrap/less/labels-badges";
+@import "labels";
 @import "../bootstrap/less/progress-bars";
 @import "../bootstrap/less/accordion";
 @import "../bootstrap/less/carousel";
