Remove focus border from select and textarea

--- a/less/reset.less
+++ b/less/reset.less
@@ -7,6 +7,8 @@ a:focus,
 body:focus,
 div:focus,
 button:focus,
+textarea:focus,
+select:focus,
 input:focus {outline: 0 !important;}
 button:focus {outline: none;}
 button::-moz-focus-inner {border: 0;}
