Add styling to ring text

--- a/less/labels.less
+++ b/less/labels.less
@@ -17,6 +17,8 @@
    position: relative;
    border: @ringBadgeBorder solid @grayDark;
    color: @grayDark;
+   font-size: 20px;
+   font-weight: bold;
    i { 
       font-size: @ringBadgeIconSize; 
       position: absolute;
