--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -47,6 +47,9 @@ Bootstrap customization best practices: http://stackoverflow.com/questions/10451
   -moz-box-shadow: none;
   box-shadow: none;
 }
+.no-background-image {
+  background-image: none;
+}
 article,
 aside,
 details,
@@ -4346,6 +4349,8 @@ input[type="submit"].btn.btn-mini {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+  padding-left: 0;
+  padding-right: 0;
 }
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
@@ -4361,10 +4366,41 @@ input[type="submit"].btn.btn-mini {
   -moz-box-shadow: none;
   box-shadow: none;
 }
+.navbar .brand {
+  margin-left: 0;
+}
+.navbar-search {
+  margin-right: 20px;
+}
 .navbar-search .search-query {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
+}
+.navbar-inverse .navbar-inner {
+  background-image: none;
+  background-color: #4d4d4d;
+}
+.navbar-inverse .nav .active > a,
+.navbar-inverse .nav .active > a:hover,
+.navbar-inverse .nav .active > a:focus,
+.navbar-inverse .nav li.dropdown.open > .dropdown-toggle,
+.navbar-inverse .nav li.dropdown.active > .dropdown-toggle,
+.navbar-inverse .nav li.dropdown.open.active > .dropdown-toggle {
+  color: #fff;
+  background-color: #333;
+}
+.navbar-inverse .navbar-search .search-query {
+  color: #fff;
+  background-color: #333;
+}
+.navbar-inverse .brand,
+.navbar-inverse .nav > li > a {
+  color: #fff;
+}
+.navbar-inverse .divider-vertical {
+  border-left-color: #333;
+  border-right-color: #555;
 }
 .breadcrumb {
   padding: 8px 15px;
