--- a/less/navbar.less
+++ b/less/navbar.less
@@ -6,6 +6,8 @@
 	background-image: none;
 	filter: 0;
 	.no-box-shadow;
+	padding-left: 0;
+	padding-right: 0;
 }
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
@@ -18,10 +20,42 @@
 		filter: 0;
 		.no-box-shadow;
 	}
+
+	.brand {
+		margin-left: 0;
+	}
 }
 
 .navbar-search {
+	margin-right: 20px;
+
 	.search-query {
 		.no-border-radius;
 	}
+}
+
+.navbar-inverse .navbar-inner {
+	.no-background-image;
+	background-color: #4d4d4d;
+}
+
+.navbar-inverse .nav .active > a, .navbar-inverse .nav .active > a:hover, .navbar-inverse .nav .active > a:focus,
+.navbar-inverse .nav li.dropdown.open > .dropdown-toggle, .navbar-inverse .nav li.dropdown.active > .dropdown-toggle, .navbar-inverse .nav li.dropdown.open.active > .dropdown-toggle {
+	color: #fff;
+	background-color: #333;
+}
+
+.navbar-inverse .navbar-search .search-query {
+	color: #fff;
+	background-color: #333;
+}
+
+.navbar-inverse .brand, .navbar-inverse .nav > li > a {
+	color: #fff;
+}
+
+.navbar-inverse .divider-vertical {
+	border-left-color: #333;
+	border-right-color: #555;
+	margin: 0;
 }
