Change colors to blue. Fix sidebar nav.
* http://o7.no/YqzTFa

--- a/less/responsive.less
+++ b/less/responsive.less
@@ -12,7 +12,7 @@
 		max-width: 970px;
 	}
 	.bs-docs-sidenav {
-		width: 258px;
+		width: auto;
 	}
 	.bs-docs-sidenav > li > a {
 		width: 230px \9; /* Override the previous IE8-9 hack */
@@ -57,7 +57,7 @@
 	}
 	/* Adjust sidenav width */
 	.bs-docs-sidenav {
-		width: 166px;
+		width: auto;
 		margin-top: 20px;
 	}
 	.bs-docs-sidenav.affix {
