--- a/less/variables.less
+++ b/less/variables.less
@@ -42,8 +42,8 @@
 
 // Links
 // -------------------------
-@linkColor:             #293674;
-@linkColorHover:        #F7941D;
+@linkColor:             @blue;
+@linkColorHover:        @blueDark;
 
 
 // Typography
