--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -228,12 +228,12 @@ body {
   background-color: #ffffff;
 }
 a {
-  color: #293674;
+  color: #2e8bcc;
   text-decoration: none;
 }
 a:hover,
 a:focus {
-  color: #f7941d;
+  color: #20608e;
   text-decoration: underline;
 }
 .img-rounded {
@@ -2546,14 +2546,14 @@ table th[class*="span"],
 .dropdown-submenu:focus > a {
   text-decoration: none;
   color: #ffffff;
-  background-color: #26326c;
-  background-image: -moz-linear-gradient(top, #293674, #222d61);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#293674), to(#222d61));
-  background-image: -webkit-linear-gradient(top, #293674, #222d61);
-  background-image: -o-linear-gradient(top, #293674, #222d61);
-  background-image: linear-gradient(to bottom, #293674, #222d61);
+  background-color: #2c85c4;
+  background-image: -moz-linear-gradient(top, #2e8bcc, #297db7);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2e8bcc), to(#297db7));
+  background-image: -webkit-linear-gradient(top, #2e8bcc, #297db7);
+  background-image: -o-linear-gradient(top, #2e8bcc, #297db7);
+  background-image: linear-gradient(to bottom, #2e8bcc, #297db7);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff293674', endColorstr='#ff222d61', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2e8bcc', endColorstr='#ff297db7', GradientType=0);
 }
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
@@ -2561,14 +2561,14 @@ table th[class*="span"],
   color: #333333;
   text-decoration: none;
   outline: 0;
-  background-color: #26326c;
-  background-image: -moz-linear-gradient(top, #293674, #222d61);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#293674), to(#222d61));
-  background-image: -webkit-linear-gradient(top, #293674, #222d61);
-  background-image: -o-linear-gradient(top, #293674, #222d61);
-  background-image: linear-gradient(to bottom, #293674, #222d61);
+  background-color: #2c85c4;
+  background-image: -moz-linear-gradient(top, #2e8bcc, #297db7);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2e8bcc), to(#297db7));
+  background-image: -webkit-linear-gradient(top, #2e8bcc, #297db7);
+  background-image: -o-linear-gradient(top, #2e8bcc, #297db7);
+  background-image: linear-gradient(to bottom, #2e8bcc, #297db7);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff293674', endColorstr='#ff222d61', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2e8bcc', endColorstr='#ff297db7', GradientType=0);
 }
 .dropdown-menu > .disabled > a,
 .dropdown-menu > .disabled > a:hover,
@@ -2909,17 +2909,17 @@ input[type="button"].btn-block {
 .btn-primary {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #2b3174;
-  background-image: -moz-linear-gradient(top, #293674, #2f2974);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#293674), to(#2f2974));
-  background-image: -webkit-linear-gradient(top, #293674, #2f2974);
-  background-image: -o-linear-gradient(top, #293674, #2f2974);
-  background-image: linear-gradient(to bottom, #293674, #2f2974);
+  background-color: #2e7bcc;
+  background-image: -moz-linear-gradient(top, #2e8bcc, #2e63cc);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2e8bcc), to(#2e63cc));
+  background-image: -webkit-linear-gradient(top, #2e8bcc, #2e63cc);
+  background-image: -o-linear-gradient(top, #2e8bcc, #2e63cc);
+  background-image: linear-gradient(to bottom, #2e8bcc, #2e63cc);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff293674', endColorstr='#ff2f2974', GradientType=0);
-  border-color: #2f2974 #2f2974 #18153b;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2e8bcc', endColorstr='#ff2e63cc', GradientType=0);
+  border-color: #2e63cc #2e63cc #20458e;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  *background-color: #2f2974;
+  *background-color: #2e63cc;
   /* Darken IE7 buttons by default so they stand out more given they won't have borders */
 
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
@@ -2931,12 +2931,12 @@ input[type="button"].btn-block {
 .btn-primary.disabled,
 .btn-primary[disabled] {
   color: #ffffff;
-  background-color: #2f2974;
-  *background-color: #272261;
+  background-color: #2e63cc;
+  *background-color: #2959b7;
 }
 .btn-primary:active,
 .btn-primary.active {
-  background-color: #201c4e \9;
+  background-color: #254fa2 \9;
 }
 .btn-warning {
   color: #ffffff;
@@ -3135,14 +3135,14 @@ input[type="submit"].btn.btn-mini {
 .btn-link {
   border-color: transparent;
   cursor: pointer;
-  color: #293674;
+  color: #2e8bcc;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
 }
 .btn-link:hover,
 .btn-link:focus {
-  color: #f7941d;
+  color: #20608e;
   text-decoration: underline;
   background-color: transparent;
 }
@@ -3289,7 +3289,7 @@ input[type="submit"].btn.btn-mini {
   background-color: #eeeeee;
 }
 .btn-group.open .btn-primary.dropdown-toggle {
-  background-color: #2f2974;
+  background-color: #2e63cc;
 }
 .btn-group.open .btn-warning.dropdown-toggle {
   background-color: #f09609;
@@ -3484,7 +3484,7 @@ input[type="submit"].btn.btn-mini {
 .nav-list > .active > a:focus {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
-  background-color: #293674;
+  background-color: #2e8bcc;
 }
 .nav-list [class^="icon-"],
 .nav-list [class*=" icon-"] {
@@ -3567,7 +3567,7 @@ input[type="submit"].btn.btn-mini {
 .nav-pills > .active > a:hover,
 .nav-pills > .active > a:focus {
   color: #ffffff;
-  background-color: #293674;
+  background-color: #2e8bcc;
 }
 .nav-stacked > li {
   float: none;
@@ -3622,14 +3622,14 @@ input[type="submit"].btn.btn-mini {
   border-radius: 6px;
 }
 .nav .dropdown-toggle .caret {
-  border-top-color: #293674;
-  border-bottom-color: #293674;
+  border-top-color: #2e8bcc;
+  border-bottom-color: #2e8bcc;
   margin-top: 6px;
 }
 .nav .dropdown-toggle:hover .caret,
 .nav .dropdown-toggle:focus .caret {
-  border-top-color: #f7941d;
-  border-bottom-color: #f7941d;
+  border-top-color: #20608e;
+  border-bottom-color: #20608e;
 }
 /* move down carets for tabs */
 .nav-tabs .dropdown-toggle .caret {
@@ -4401,6 +4401,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-inverse .divider-vertical {
   border-left-color: #333;
   border-right-color: #555;
+  margin: 0;
 }
 .breadcrumb {
   padding: 8px 15px;
@@ -4607,6 +4608,76 @@ input[type="submit"].btn.btn-mini {
   color: #999999;
   background-color: #fff;
   cursor: default;
+}
+/* Sidenav for Docs
+-------------------------------------------------- */
+.bs-docs-sidenav {
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+.bs-docs-sidenav > li > a {
+  display: block;
+  width: 190px \9;
+  margin: 0 0 -1px;
+  padding: 8px 14px;
+  border: 1px solid #e5e5e5;
+}
+.bs-docs-sidenav > li:first-child > a {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+.bs-docs-sidenav > li:last-child > a {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+.bs-docs-sidenav > .active > a {
+  position: relative;
+  z-index: 2;
+  padding: 9px 15px;
+  border: 0;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+.bs-docs-sidenav .icon-angle-right {
+  float: right;
+  margin-top: 2px;
+  margin-right: -6px;
+  opacity: 0.25;
+  filter: alpha(opacity=25);
+}
+.bs-docs-sidenav a:hover .icon-angle-right {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+}
+.bs-docs-sidenav .active .icon-angle-right,
+.bs-docs-sidenav .active a:hover .icon-angle-right {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.bs-docs-sidenav {
+  width: auto;
+}
+.bs-docs-sidenav.affix {
+  top: 40px;
+}
+.bs-docs-sidenav.affix-bottom {
+  position: absolute;
+  top: auto;
+  bottom: 270px;
 }
 .modal-backdrop {
   position: fixed;
@@ -4968,7 +5039,7 @@ input[type="submit"].btn.btn-mini {
 }
 a.thumbnail:hover,
 a.thumbnail:focus {
-  border-color: #293674;
+  border-color: #2e8bcc;
   -webkit-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
   -moz-box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
   box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25);
@@ -6659,7 +6730,7 @@ a.badge:focus {
     max-width: 970px;
   }
   .bs-docs-sidenav {
-    width: 258px;
+    width: auto;
   }
   .bs-docs-sidenav > li > a {
     width: 230px \9;
@@ -6704,7 +6775,7 @@ a.badge:focus {
   }
   /* Adjust sidenav width */
   .bs-docs-sidenav {
-    width: 166px;
+    width: auto;
     margin-top: 20px;
   }
   .bs-docs-sidenav.affix {
