--- a/less/buttons.less
+++ b/less/buttons.less
@@ -1,2 +1,13 @@
 // Customise buttons
 //
+
+.btn-primary {
+	border-bottom: 1px solid #004466;
+	.box-shadow(~"0 -2px 0 rgba(0,0,0,0.2) inset,0 0 1px rgba(0,0,0,0.1)");
+}
+.btn {
+	.no-background-image();
+}
+.btn-primary {
+	.no-background-image();
+}
