--- a/less/reset.less
+++ b/less/reset.less
@@ -275,7 +275,7 @@ input.search-query,
 .nav-collapse .dropdown-menu,
 
 .border-radius-off {
-    -webkit-border-radius: 0 !important;
-    -moz-border-radius: 0 !important;
-    border-radius: 0 !important;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
 }
