--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -31,7 +31,7 @@
 	padding: 9px 15px;
 	border: 0;
 	text-shadow: 0 1px 0 rgba(0,0,0,.15);
-	.box-shadow(inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1));
+	.box-shadow(~"inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1)");
 }
 
 .bs-docs-sidenav .icon-angle-right {
