Clean up reset.

--- a/less/reset.less
+++ b/less/reset.less
@@ -1,124 +1,4 @@
-
-/*-----------------------------------------------------------------------------------*/
-/*  1.  Global properties (body, common classes, vertical rhythm, structure etc)
-/*-----------------------------------------------------------------------------------*/
-
-a:focus,
-body:focus,
-div:focus,
-button:focus,
-textarea:focus,
-select:focus,
-input:focus {outline: 0 !important;}
-button:focus {outline: none;}
-button::-moz-focus-inner {border: 0;}
-
-/* icons */
-[class^="icon-"]:before, [class*=" icon-"]:before {
-    width: 16px; text-align: center;
-}
-
-/* Link Colors */
-/*-----------------------------------------------------------------------------------*/
-a, a:hover { text-decoration: none;}
-
-.container { position: relative; }
-@media (max-width: 767px) {
-    .container { padding-left: @gridGutterWidth; padding-right: @gridGutterWidth; }
-}
-
-/* Google maps */
-/*-----------------------------------------------------------------------------------*/
-.gmap {
-    max-width: 100%;
-    line-height: 0;
-    margin-bottom: 20px;
-}
-
-/* Video container */
-/*-----------------------------------------------------------------------------------*/
-.video,
-.video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px;
-    height: 0;
-    overflow: hidden;
-}
-
-.video iframe,
-.video-container iframe,
-.video object,
-.video-container object,
-.video embed,
-.video-container embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-/* Accordion */
-/*-----------------------------------------------------------------------------------*/
-.accordion-heading {background-color: #5195CE;}
-.accordion-heading:hover {background-color: #005DB3;}
-.accordion-toggle, .accordion-toggle:hover {color: #FFFFFF;}
-.accordion-group {background-color: #E9E9E9; border: 0;}
-
-/* Testimonials */
-/*-----------------------------------------------------------------------------------*/
-.testimonials p {margin-left: 70px}
-.testimonials h4 {margin-left: 70px;}
-.testimonials img {
-    float: left;
-    margin-bottom: 10px;
-}
-.testimonials small {
-    display: block;
-    font-size: 11px;
-    letter-spacing: 0;
-}
-
-/* Font Awesome Icons List */
-/*-----------------------------------------------------------------------------------*/
-.the-icons {list-style-type: none; margin-left: 0;}
-.the-icons li [class^="icon-"],
-.the-icons li [class*=" icon-"] {
-    width: 16px; font-size: 16px;
-}
-
-/* Hero unit */
-/*-----------------------------------------------------------------------------------*/
-.hero-unit {}
-
-@media (min-width: 768px) and (max-width: 979px) {
-
-}
-
-@media (max-width: 767px) {
-    .hero-unit {padding: 40px;}
-    .hero-unit h1 {}
-}
-
-@media (max-width: 480px) {
-    .hero-unit {padding: 10px; font-size: 14px; line-height: 1.5;}
-    .hero-unit h1 {font-size: 22px; line-height: 1.5;}
-}
-
-div.spacer {height: 50px;}
-hr {
-    margin: 25px 0;
-    border-top: 3px solid #D6D3D1;
-    border-bottom: none;
-}
-
-blockquote {border-color: #005DB3;}
-blockquote p {font-size: 13px; font-style: italic; line-height: 1.5;}
-
-
-/* reset bootstrap radius */
-/*-----------------------------------------------------------------------------------*/
+// reset radius
 
 code, pre,
 .label, .badge,
@@ -275,7 +155,7 @@ input.search-query,
 .nav-collapse .dropdown-menu,
 
 .border-radius-off {
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	border-radius: 0;
 }
