--- a/less/navs.less
+++ b/less/navs.less
@@ -31,3 +31,75 @@
 .tabs-right > .nav-tabs > li > a {
    .no-border-radius;
 }
+
+//
+// Nav lists 
+// --------------------------------------------------
+
+.nav-list {
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  .border-radius(0);
+  .box-shadow(0 1px 4px rgba(0,0,0,.065));
+}
+
+.nav-list > li > a {
+  display: block;
+  width: 190px \9;
+  margin: 0 0 -1px;
+  padding: 8px 14px;
+  border: 1px solid #e5e5e5;
+}
+
+.nav-list > li > a > i {
+  float: right;
+}
+
+.nav-list > li:first-child > a {
+  .border-radius(0);
+}
+
+.nav-list > li:last-child > a {
+  .border-radius(0);
+}
+
+.nav-list > .active > a {
+  position: relative;
+  z-index: 2;
+  padding: 9px 15px;
+  border: 0;
+  text-shadow: 0 1px 0 rgba(0,0,0,.15);
+  .box-shadow(~"inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1)");
+}
+
+.nav-list .icon-angle-right {
+  float: right;
+  margin-top: 2px;
+  margin-right: -6px;
+  .opacity(25);
+}
+
+.nav-list > li > a:hover {
+}
+
+.nav-list a:hover .icon-angle-right {
+  .opacity(50);
+}
+
+.nav-list .active .icon-angle-right,
+.nav-list .active a:hover .icon-angle-right {
+  .opacity(100);
+}
+
+.nav-list {
+  width: auto;
+}
+.nav-list.affix {
+  top: 40px;
+}
+.nav-list.affix-bottom {
+  position: absolute;
+  top: auto;
+  bottom: 270px;
+}
