--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -3316,7 +3316,10 @@ input[type="submit"].btn.btn-mini {
   -moz-border-radius: 0 0 0 0;
   border-radius: 0 0 0 0;
 }
-.btn {
+.btn,
+.btn-group.open .dropdown-toggle,
+.btn-group > .btn + .dropdown-toggle,
+.btn-group.open .btn.dropdown-toggle {
   background-image: none;
   -webkit-box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset,0 0 1px rgba(0,0,0,0.1);
   -moz-box-shadow: 0 -2px 0 rgba(0,0,0,0.2) inset,0 0 1px rgba(0,0,0,0.1);
@@ -3760,6 +3763,74 @@ input[type="submit"].btn.btn-mini {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
+}
+.nav-list {
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+}
+.nav-list > li > a {
+  display: block;
+  width: 190px \9;
+  margin: 0 0 -1px;
+  padding: 8px 14px;
+  border: 1px solid #e5e5e5;
+}
+.nav-list > li > a > i {
+  float: right;
+}
+.nav-list > li:first-child > a {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+.nav-list > li:last-child > a {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+}
+.nav-list > .active > a {
+  position: relative;
+  z-index: 2;
+  padding: 9px 15px;
+  border: 0;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
+  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
+  box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
+}
+.nav-list .icon-angle-right {
+  float: right;
+  margin-top: 2px;
+  margin-right: -6px;
+  opacity: 0.25;
+  filter: alpha(opacity=25);
+}
+.nav-list a:hover .icon-angle-right {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+}
+.nav-list .active .icon-angle-right,
+.nav-list .active a:hover .icon-angle-right {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+.nav-list {
+  width: auto;
+}
+.nav-list.affix {
+  top: 40px;
+}
+.nav-list.affix-bottom {
+  position: absolute;
+  top: auto;
+  bottom: 270px;
 }
 .navbar {
   overflow: visible;
@@ -4530,73 +4601,6 @@ input[type="submit"].btn.btn-mini {
   color: #999999;
   background-color: #fff;
   cursor: default;
-}
-/* Sidenav for Docs
--------------------------------------------------- */
-.bs-docs-sidenav {
-  margin: 0;
-  padding: 0;
-  background-color: #fff;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-}
-.bs-docs-sidenav > li > a {
-  display: block;
-  width: 190px \9;
-  margin: 0 0 -1px;
-  padding: 8px 14px;
-  border: 1px solid #e5e5e5;
-}
-.bs-docs-sidenav > li:first-child > a {
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-}
-.bs-docs-sidenav > li:last-child > a {
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-}
-.bs-docs-sidenav > .active > a {
-  position: relative;
-  z-index: 2;
-  padding: 9px 15px;
-  border: 0;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
-  -moz-box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
-  box-shadow: inset 1px 0 0 rgba(0,0,0,.1), inset -1px 0 0 rgba(0,0,0,.1);
-}
-.bs-docs-sidenav .icon-angle-right {
-  float: right;
-  margin-top: 2px;
-  margin-right: -6px;
-  opacity: 0.25;
-  filter: alpha(opacity=25);
-}
-.bs-docs-sidenav a:hover .icon-angle-right {
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-}
-.bs-docs-sidenav .active .icon-angle-right,
-.bs-docs-sidenav .active a:hover .icon-angle-right {
-  opacity: 1;
-  filter: alpha(opacity=100);
-}
-.bs-docs-sidenav {
-  width: auto;
-}
-.bs-docs-sidenav.affix {
-  top: 40px;
-}
-.bs-docs-sidenav.affix-bottom {
-  position: absolute;
-  top: auto;
-  bottom: 270px;
 }
 .modal-backdrop {
   position: fixed;
