--- a/less/navs.less
+++ b/less/navs.less
@@ -41,7 +41,7 @@
   padding: 0;
   background-color: #fff;
   .border-radius(0);
-  .box-shadow(0 1px 4px rgba(0,0,0,.065));
+  .box-shadow(0 none);
 }
 
 .nav-list > li > a {
