--- a/less/variables.less
+++ b/less/variables.less
@@ -236,20 +236,20 @@
 
 // Form states and alerts
 // -------------------------
-@warningText:             #c09853;
-@warningBackground:       @orange;
-@warningBorder:           darken(spin(@orange, -10), 3%);
+@warningText:             #fff;
+@warningBackground:       #2ba6cb;
+@warningBorder:           darken(spin(@warningBackground, -10), 3%);
 
-@errorText:               #b94a48;
-@errorBackground:         #BC1C48;
+@errorText:               #fff;
+@errorBackground:         #c60f13;
 @errorBorder:             darken(spin(@errorBackground, -10), 3%);
 
-@successText:             #468847;
-@successBackground:       #01A31C;
+@successText:             #fff;
+@successBackground:       #6ec229;
 @successBorder:           darken(spin(@successBackground, -10), 5%);
 
-@infoText:                #3a87ad;
-@infoBackground:          #2D89F0;
+@infoText:                #fff;
+@infoBackground:          #c2c60c;
 @infoBorder:              darken(spin(@infoBackground, -10), 7%);
 
 
