--- a/docs/assets/css/bootstrap.css
+++ b/docs/assets/css/bootstrap.css
@@ -590,32 +590,32 @@ a.muted:focus {
   color: #808080;
 }
 .text-warning {
-  color: #c09853;
+  color: #ffffff;
 }
 a.text-warning:hover,
 a.text-warning:focus {
-  color: #a47e3c;
+  color: #e6e6e6;
 }
 .text-error {
-  color: #b94a48;
+  color: #ffffff;
 }
 a.text-error:hover,
 a.text-error:focus {
-  color: #953b39;
+  color: #e6e6e6;
 }
 .text-info {
-  color: #3a87ad;
+  color: #ffffff;
 }
 a.text-info:hover,
 a.text-info:focus {
-  color: #2d6987;
+  color: #e6e6e6;
 }
 .text-success {
-  color: #468847;
+  color: #ffffff;
 }
 a.text-success:hover,
 a.text-success:focus {
-  color: #356635;
+  color: #e6e6e6;
 }
 .text-left {
   text-align: left;
@@ -1262,19 +1262,19 @@ input[type="checkbox"][readonly] {
 .control-group.warning .control-label,
 .control-group.warning .help-block,
 .control-group.warning .help-inline {
-  color: #c09853;
+  color: #ffffff;
 }
 .control-group.warning .checkbox,
 .control-group.warning .radio,
 .control-group.warning input,
 .control-group.warning select,
 .control-group.warning textarea {
-  color: #c09853;
+  color: #ffffff;
 }
 .control-group.warning input,
 .control-group.warning select,
 .control-group.warning textarea {
-  border-color: #c09853;
+  border-color: #ffffff;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1282,33 +1282,33 @@ input[type="checkbox"][readonly] {
 .control-group.warning input:focus,
 .control-group.warning select:focus,
 .control-group.warning textarea:focus {
-  border-color: #a47e3c;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #dbc59e;
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #dbc59e;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #dbc59e;
+  border-color: #e6e6e6;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
 }
 .control-group.warning .input-prepend .add-on,
 .control-group.warning .input-append .add-on {
-  color: #c09853;
-  background-color: #f09609;
-  border-color: #c09853;
+  color: #ffffff;
+  background-color: #2ba6cb;
+  border-color: #ffffff;
 }
 .control-group.error .control-label,
 .control-group.error .help-block,
 .control-group.error .help-inline {
-  color: #b94a48;
+  color: #ffffff;
 }
 .control-group.error .checkbox,
 .control-group.error .radio,
 .control-group.error input,
 .control-group.error select,
 .control-group.error textarea {
-  color: #b94a48;
+  color: #ffffff;
 }
 .control-group.error input,
 .control-group.error select,
 .control-group.error textarea {
-  border-color: #b94a48;
+  border-color: #ffffff;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1316,33 +1316,33 @@ input[type="checkbox"][readonly] {
 .control-group.error input:focus,
 .control-group.error select:focus,
 .control-group.error textarea:focus {
-  border-color: #953b39;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #d59392;
+  border-color: #e6e6e6;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
 }
 .control-group.error .input-prepend .add-on,
 .control-group.error .input-append .add-on {
-  color: #b94a48;
-  background-color: #bc1c48;
-  border-color: #b94a48;
+  color: #ffffff;
+  background-color: #c60f13;
+  border-color: #ffffff;
 }
 .control-group.success .control-label,
 .control-group.success .help-block,
 .control-group.success .help-inline {
-  color: #468847;
+  color: #ffffff;
 }
 .control-group.success .checkbox,
 .control-group.success .radio,
 .control-group.success input,
 .control-group.success select,
 .control-group.success textarea {
-  color: #468847;
+  color: #ffffff;
 }
 .control-group.success input,
 .control-group.success select,
 .control-group.success textarea {
-  border-color: #468847;
+  border-color: #ffffff;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1350,33 +1350,33 @@ input[type="checkbox"][readonly] {
 .control-group.success input:focus,
 .control-group.success select:focus,
 .control-group.success textarea:focus {
-  border-color: #356635;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+  border-color: #e6e6e6;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
 }
 .control-group.success .input-prepend .add-on,
 .control-group.success .input-append .add-on {
-  color: #468847;
-  background-color: #01a31c;
-  border-color: #468847;
+  color: #ffffff;
+  background-color: #6ec229;
+  border-color: #ffffff;
 }
 .control-group.info .control-label,
 .control-group.info .help-block,
 .control-group.info .help-inline {
-  color: #3a87ad;
+  color: #ffffff;
 }
 .control-group.info .checkbox,
 .control-group.info .radio,
 .control-group.info input,
 .control-group.info select,
 .control-group.info textarea {
-  color: #3a87ad;
+  color: #ffffff;
 }
 .control-group.info input,
 .control-group.info select,
 .control-group.info textarea {
-  border-color: #3a87ad;
+  border-color: #ffffff;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -1384,16 +1384,16 @@ input[type="checkbox"][readonly] {
 .control-group.info input:focus,
 .control-group.info select:focus,
 .control-group.info textarea:focus {
-  border-color: #2d6987;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7ab5d3;
-  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7ab5d3;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7ab5d3;
+  border-color: #e6e6e6;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ffffff;
 }
 .control-group.info .input-prepend .add-on,
 .control-group.info .input-append .add-on {
-  color: #3a87ad;
-  background-color: #2d89f0;
-  border-color: #3a87ad;
+  color: #ffffff;
+  background-color: #c2c60c;
+  border-color: #ffffff;
 }
 input:focus:invalid,
 textarea:focus:invalid,
@@ -1946,28 +1946,28 @@ table th[class*="span"],
   margin-left: 0;
 }
 .table tbody tr.success > td {
-  background-color: #01a31c;
+  background-color: #6ec229;
 }
 .table tbody tr.error > td {
-  background-color: #bc1c48;
+  background-color: #c60f13;
 }
 .table tbody tr.warning > td {
-  background-color: #f09609;
+  background-color: #2ba6cb;
 }
 .table tbody tr.info > td {
-  background-color: #2d89f0;
+  background-color: #c2c60c;
 }
 .table-hover tbody tr.success:hover > td {
-  background-color: #018a18;
+  background-color: #62ad25;
 }
 .table-hover tbody tr.error:hover > td {
-  background-color: #a6193f;
+  background-color: #ae0d11;
 }
 .table-hover tbody tr.warning:hover > td {
-  background-color: #d78708;
+  background-color: #2795b6;
 }
 .table-hover tbody tr.info:hover > td {
-  background-color: #157cee;
+  background-color: #aaae0b;
 }
 [class^="icon-"],
 [class*=" icon-"] {
@@ -3329,15 +3329,15 @@ input[type="submit"].btn.btn-mini {
   padding: 8px 35px 8px 14px;
   margin-bottom: 20px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
-  background-color: #f09609;
-  border: 1px solid #e16908;
+  background-color: #2ba6cb;
+  border: 1px solid #28b5be;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
 }
 .alert,
 .alert h4 {
-  color: #c09853;
+  color: #ffffff;
 }
 .alert h4 {
   margin: 0;
@@ -3349,30 +3349,30 @@ input[type="submit"].btn.btn-mini {
   line-height: 20px;
 }
 .alert-success {
-  background-color: #01a31c;
-  border-color: #018a01;
-  color: #468847;
+  background-color: #6ec229;
+  border-color: #79ad25;
+  color: #ffffff;
 }
 .alert-success h4 {
-  color: #468847;
+  color: #ffffff;
 }
 .alert-danger,
 .alert-error {
-  background-color: #bc1c48;
-  border-color: #af1a5c;
-  color: #b94a48;
+  background-color: #c60f13;
+  border-color: #b80e2e;
+  color: #ffffff;
 }
 .alert-danger h4,
 .alert-error h4 {
-  color: #b94a48;
+  color: #ffffff;
 }
 .alert-info {
-  background-color: #2d89f0;
-  border-color: #119be9;
-  color: #3a87ad;
+  background-color: #c2c60c;
+  border-color: #a48e0a;
+  color: #ffffff;
 }
 .alert-info h4 {
-  color: #3a87ad;
+  color: #ffffff;
 }
 .alert-block {
   padding-top: 14px;
@@ -3384,6 +3384,9 @@ input[type="submit"].btn.btn-mini {
 }
 .alert-block p + p {
   margin-top: 5px;
+}
+.alert {
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
 }
 .nav {
   margin-left: 0;
@@ -5033,11 +5036,11 @@ a.badge:focus {
 }
 .label-important,
 .badge-important {
-  background-color: #b94a48;
+  background-color: #ffffff;
 }
 .label-important[href],
 .badge-important[href] {
-  background-color: #953b39;
+  background-color: #e6e6e6;
 }
 .label-warning,
 .badge-warning {
@@ -5049,19 +5052,19 @@ a.badge:focus {
 }
 .label-success,
 .badge-success {
-  background-color: #468847;
+  background-color: #ffffff;
 }
 .label-success[href],
 .badge-success[href] {
-  background-color: #356635;
+  background-color: #e6e6e6;
 }
 .label-info,
 .badge-info {
-  background-color: #3a87ad;
+  background-color: #ffffff;
 }
 .label-info[href],
 .badge-info[href] {
-  background-color: #2d6987;
+  background-color: #e6e6e6;
 }
 .label-inverse,
 .badge-inverse {
@@ -5109,12 +5112,12 @@ a.badge:focus {
   width: 32px;
 }
 .ring-badge-important {
-  color: #b94a48;
-  border-color: #b94a48;
+  color: #ffffff;
+  border-color: #ffffff;
 }
 .ring-badge-important[href] {
-  color: #953b39;
-  border-color: #953b39;
+  color: #e6e6e6;
+  border-color: #e6e6e6;
 }
 .ring-badge-warning {
   color: #f09609;
@@ -5125,20 +5128,20 @@ a.badge:focus {
   border-color: #bf7707;
 }
 .ring-badge-success {
-  color: #468847;
-  border-color: #468847;
+  color: #ffffff;
+  border-color: #ffffff;
 }
 .ring-badge-success[href] {
-  color: #356635;
-  border-color: #356635;
+  color: #e6e6e6;
+  border-color: #e6e6e6;
 }
 .ring-badge-info {
-  color: #3a87ad;
-  border-color: #3a87ad;
+  color: #ffffff;
+  border-color: #ffffff;
 }
 .ring-badge-info[href] {
-  color: #2d6987;
-  border-color: #2d6987;
+  color: #e6e6e6;
+  border-color: #e6e6e6;
 }
 .ring-badge-inverse {
   color: #333333;
