--- a/less/navbar.less
+++ b/less/navbar.less
@@ -54,8 +54,13 @@
 	color: #fff;
 }
 
+.navbar .divider-vertical {
+	margin: 0;
+	border-left: 1px solid #ddd;
+	border-right: 1px solid #fff;
+}
+
 .navbar-inverse .divider-vertical {
 	border-left-color: #333;
 	border-right-color: #555;
-	margin: 0;
 }
